@@ -4,9 +4,9 @@ _Name=Phone Manager
 _Comment=Receive and send text messages from your mobile phone
 Icon=cellphone
 Exec=gnome-phone-manager
-Terminal=0
+Terminal=false
 Type=Application
-Categories=Application;System;Telephony;
+Categories=System;Telephony;
 X-GNOME-Bugzilla-Bugzilla=GNOME
-X-GNOME-Bugzilla-Product=phonemgr
-X-GNOME-Bugzilla-Component=phonemgr
+X-GNOME-Bugzilla-Product=gnome-phone-manager
+X-GNOME-Bugzilla-Component=general
